basics oop in java

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /month1/week1/mavenproject1/target/
 /month1/week1/day2/mavenproject2/target/
 /month1/week1/day3/mavenproject3/target/
+/month1/week1/day4/mavenproject4/target/
