--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /month1/week1/day2/mavenproject2/target/
 /month1/week1/day3/mavenproject3/target/
 /month1/week1/day4/mavenproject4/target/
+/month1/week1/day5/mavenproject5/target/
