Inheritance and abstraction in java with interface

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /month1/week1/day3/mavenproject3/target/
 /month1/week1/day4/mavenproject4/target/
 /month1/week1/day5/mavenproject5/target/
+/month1/week1/day6/mavenproject6/target/
