--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /month1/week1/day4/mavenproject4/target/
 /month1/week1/day5/mavenproject5/target/
 /month1/week1/day6/mavenproject6/target/
+/month1/week2/day1/mavenproject1/target/
