all about Threads in java

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /month1/week1/day6/mavenproject6/target/
 /month1/week2/day1/mavenproject1/target/
 /month1/week2/day1/Main/target/
+/month1/week3/day1/Main/target/
