Synchronize in java

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /month1/week2/day1/mavenproject1/target/
 /month1/week2/day1/Main/target/
 /month1/week3/day1/Main/target/
+/month1/week3/day2/Main/target/
