--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /month1/week2/day1/Main/target/
 /month1/week3/day1/Main/target/
 /month1/week3/day2/Main/target/
+/month1/week3/day3/FunctionalInterface/target/
