--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /month1/week3/day1/Main/target/
 /month1/week3/day2/Main/target/
 /month1/week3/day3/FunctionalInterface/target/
+/month1/week3/day4/Main/target/
