About nested class inner and static class

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /month1/week3/day2/Main/target/
 /month1/week3/day3/FunctionalInterface/target/
 /month1/week3/day4/Main/target/
+/month1/week3/day5/Main/target/
