Networking fundamental in java

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /month1/week3/day3/FunctionalInterface/target/
 /month1/week3/day4/Main/target/
 /month1/week3/day5/Main/target/
+/month1/week3/day6/Main/target/
