regex and date time in java

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /month1/week3/day4/Main/target/
 /month1/week3/day5/Main/target/
 /month1/week3/day6/Main/target/
+/month1/week4/mavenproject1/target/
