logging in java

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /month1/week3/day5/Main/target/
 /month1/week3/day6/Main/target/
 /month1/week4/mavenproject1/target/
+/month1/week4/mavenproject2/target/
