--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /month1/week3/day6/Main/target/
 /month1/week4/mavenproject1/target/
 /month1/week4/mavenproject2/target/
+/month1/week4/mavenproject3/target/
