Database and testing fuck java coding

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /month1/week4/mavenproject1/target/
 /month1/week4/mavenproject2/target/
 /month1/week4/mavenproject3/target/
+/month1/week4/mavenproject4/target/
