--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /month1/week4/mavenproject2/target/
 /month1/week4/mavenproject3/target/
 /month1/week4/mavenproject4/target/
+/month1/week4/mavenproject5/target/
