Starting the month 2 of the java jurnay

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /month1/week4/mavenproject3/target/
 /month1/week4/mavenproject4/target/
 /month1/week4/mavenproject5/target/
+/month2/week1/mavenproject1/target/
