--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /month1/week4/mavenproject4/target/
 /month1/week4/mavenproject5/target/
 /month2/week1/mavenproject1/target/
+/month2/week1/mavenproject2/target/
