Working with database in java

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /month1/week4/mavenproject5/target/
 /month2/week1/mavenproject1/target/
 /month2/week1/mavenproject2/target/
+/month2/week1/mavenproject3/target/
