--- a/month2/week1/helloworld/src/main/resources/application.properties
+++ b/month2/week1/helloworld/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=helloworld
+spring.datasource.url = jdbc:mysql://localhost:3306/userdb
+spring.datasource.username = root
+spring.datasource.password = f1309D1309@
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
